# financial-regime-analysis

./: .gitignore  LICENSE  README.md  app.py  generate_metrics.py  pyproject.toml  results.py  run_metrics.sh
assets/: datepicker.css
data/: completed.txt  metrics-2026-02-22.txt  metrics-2026-02-23.txt  out.txt  sp500_symbols.csv
src/: data_loader.py  engine.py  generate_metrics.py  summary.py  visuals.py
theory/: results.txt  theory.md  theory.py
